# sass-dep

./: .gitignore  Cargo.toml  LICENSE  README.md  setup.sh
.githooks/: pre-commit
docs/adr/: 001-parser-strategy.md  002-path-resolution.md  003-json-schema-design.md  004-graph-representation.md
src/: commands.rs  lib.rs  main.rs
src/analyzer/: cycles.rs  flags.rs  metrics.rs  mod.rs
src/cli/: commands.rs  mod.rs
src/graph/: builder.rs  mod.rs  node.rs
src/parser/: directive.rs  error.rs  lexer.rs  mod.rs
src/resolver/: mod.rs  path.rs
src/web/: mod.rs
tests/: graph_tests.rs  integration_tests.rs  parser_tests.rs  resolver_tests.rs
tests/fixtures/complex/: main.scss
tests/fixtures/complex/base/: _index.scss  _typography.scss
tests/fixtures/complex/components/: _button.scss  _card.scss
tests/fixtures/cycles/: _a.scss  _b.scss  _c.scss
tests/fixtures/legacy/: _imported.scss  main.scss
tests/fixtures/simple/: _mixins.scss  main.scss
web/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web/src/: App.css  App.module.scss  App.tsx  index.css  main.tsx
web/src/components/DataLoader/: DataLoader.css  DataLoader.module.scss  DataLoader.tsx
web/src/components/Graph/: FileNode.css  FileNode.module.scss  FileNode.tsx  (+8 more)
web/src/contexts/: ThemeContext.tsx  themeContext.ts  useTheme.ts
web/src/hooks/: useGraphData.ts  useKeyboardShortcuts.ts  usePathHighlight.ts
web/src/styles/: _base.scss  _react-flow.scss  _variables.scss  index.scss
web/src/types/: sass-dep.ts
(+13 files in other folders)
