[package]
name = "sass-dep"
version = "0.1.0"
edition = "2021"
authors = ["Emilio Dominguez"]
description = "SCSS dependency graph analyzer"
license = "MIT"
repository = "https://github.com/emiliodominguez/sass-dep"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nom = "7.1"
ignore = "0.4"
walkdir = "2.4"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2.0", features = ["serde"] }

# Web server dependencies
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
open = "5"
rust-embed = "8"
mime_guess = "2"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.8"
